welcome.lessons.welcome.array.array667.Array667.scala.error
array667:6: error: ')' expected but 'if' found.
		if (y==2) {
                ^